[package]
name = "pulse-simple"
version = "0.0.0"
authors = ["Astro <astro@spaceboyz.net>"]
description = "Simple Pulseaudio crate for the Rust language"
repository = "https://github.com/astro/rust-pulse-simple"
license = "LGPL-3.0"
license-file = "LICENSE"

[dependencies]
libpulse-sys = "0.0.0"
libc = "*"
